# thousand-words

./: LICENSE  README.md  pyproject.toml  twords.py
